tests/errors/python_subclassing_pyimport_base.pxd
# cython: python_subclassing=False

cdef class Base:
    cpdef int method(self)
